--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <h1>Your Page Title</h1>
     <a href="#">Your link</a>
+
+    <video src="resources/videos/your-video.mp4" controls></video>
+    <p><img src="resources/images/landscape.jpg" alt="landscape"></p>
+    <p><img src="resources/images/cellphone-icon.png" alt="Cellphone Icon"></p>
+    
 </body>
 </html>
