--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Your Page Title</h1>
     <a href="#">Your link</a>
 
-    <video src="resources/videos/excursion (1).mp4" controls></video>
+    <video src="resources/videos/excursion.mp4" controls></video>
     <p><img src="resources/images/camp.webp" alt="landscape"></p>
     <p><img src="resources/images/phone.webp" alt="Cellphone Icon"></p>
     
