--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <video src="resources/videos/excursion.mp4" controls></video>
     <p><img src="resources/images/camp.webp" alt="landscape"></p>
-    <p><img src="resources/images/phone.webp" alt="Cellphone Icon"></p>
+    <p><img src="resources/images/phone-icon.webp" alt="Cellphone Icon"></p>
     
 </body>
 </html>
