--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheets" href="resources/css/style.css">
     <title>Excursion</title>
 </head>
 <body>
-    <h1>Your Page Title</h1>
+    <h1>Discover hidden places in the world
+              around you</h1>
     <a href="#">Your link</a>
 
     <video src="resources/videos/excursion.mp4" controls></video>
