--- a/index.html
+++ b/index.html
@@ -2,6 +2,36 @@
 <html lang="en">
 <head>
     <style>
+     body {
+  background-color: black;
+  text-align: center;
+  font-family: "Verdana", sans-serif;
+  color: white;
+}
+
+.cta {
+  color: aquamarine;
+  font-size: 16px;
+}
+
+h1 {
+  font-size: 50px;
+  font-weight: normal;
+}
+
+h2 {
+  font-size: 42px;
+  font-weight: 300;
+}
+
+p {
+  font-size: 21px;
+  color: gray;
+}
+
+.footer {
+  text-align: right;
+} 
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +41,7 @@
 <body>
     <h1>Discover hidden places in the world
               around you</h1>
-    <a href="#">Your link</a>
+    <a href="#">Download Excursion(Coming soon!)</a>
 
     <video src="resources/videos/excursion.mp4" controls></video>
     <p><img src="resources/images/camp.webp" alt="landscape"></p>
