--- a/index.html
+++ b/index.html
@@ -4,33 +4,62 @@
     <style>
      body {
   background-color: black;
-  text-align: center;
+  text-align: centred;
   font-family: "Verdana", sans-serif;
   color: white;
 }
 
-.cta {
+a{
+  display: inline;
   color: aquamarine;
   font-size: 16px;
+  margin : 600px ;
 }
 
 h1 {
+  font-family: "Verdana"
   font-size: 50px;
   font-weight: normal;
+  text-align: centred;
+  padding : 0 350px;
+  width: 100%
+}
+.video-container{
+    display:flex;
+    justify-content: centre;
+    margin: 20px 0;
+}
+.centered-video{
+  display: block;
+  margin: 20px auto;
+  width: 80%;
+  max-width: 400px;
 }
 
 h2 {
+  font-family= "Verdana";
   font-size: 42px;
   font-weight: 300;
+  text-align: centre;
+  padding: 20px 500px;
+  width: 100%;
 }
 
 p {
   font-size: 21px;
   color: gray;
+  font-family: "Verdana";
+  text-align: centre;
+  padding: 0px 300px;
+  width:100%
 }
 
-.footer {
+footer {
   text-align: right;
+  right: 0;
+  bottom: 0;
+  padding :0 1050px ;
+  color: gray;
 } 
     </style>
     <meta charset="UTF-8">
@@ -39,13 +68,23 @@ p {
     <title>Excursion</title>
 </head>
 <body>
-    <h1>Discover hidden places in the world
-              around you</h1>
+    <h1>Discover hidden places in the world around you</h1>
     <a href="#">Download Excursion(Coming soon!)</a>
-
-    <video src="resources/videos/excursion.mp4" controls></video>
+     <div class="video-container">
+    <video src="resources/videos/excursion.mp4" controls autoplay muted class="centered-video"></video>
+     </div>
+    <h2> Your personal travel guide </h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you </p>
     <p><img src="resources/images/camp.webp" alt="landscape"></p>
-    <p><img src="resources/images/phone-icon.webp" alt="Cellphone Icon"></p>
-    
+    <div style="text-align: centred;
+                 padding: 0 700px;">
+    <img src="resources/images/phone-icon.webp" alt="Cellphone Icon">
+    </div>
+    <h3 style="text-align: center;">Coming Soon for iPhone and Android</h3>
+    <a href="#">Download Excursion(Coming soon!)</a>
+    <footer>
+        <p>©Excursion</p>
+    </footer>
+
 </body>
 </html>
