--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@ footer {
      </div>
     <h2> Your personal travel guide </h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you </p>
-    <p><img src="resources/images/camp.png" alt="landscape"></p>
+    <p><img src="resources/images/camp.jpg" alt="landscape"></p>
     <div style="text-align: centred;
                  padding: 0 700px;">
-    <img src="resources/images/phone.jpg" alt="Cellphone Icon">
+    <img src="resources/images/phone.png" alt="Cellphone Icon">
     </div>
     <h3 style="text-align: center;">Coming Soon for iPhone and Android</h3>
     <a href="#">Download Excursion(Coming soon!)</a>
