--- a/index.html
+++ b/index.html
@@ -1,66 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-     body {
-  background-color: black;
-  text-align: centred;
-  font-family: "Verdana", sans-serif;
-  color: white;
-}
-
-a{
-  display: inline;
-  color: aquamarine;
-  font-size: 16px;
-  margin : 600px ;
-}
-
-h1 {
-  font-family: "Verdana"
-  font-size: 50px;
-  font-weight: normal;
-  text-align: centred;
-  padding : 0 350px;
-  width: 100%
-}
-.video-container{
-    display:flex;
-    justify-content: centre;
-    margin: 20px 0;
-}
-.centered-video{
-  display: block;
-  margin: 20px auto;
-  width: 80%;
-  max-width: 400px;
-}
-
-h2 {
-  font-family= "Verdana";
-  font-size: 42px;
-  font-weight: 300;
-  text-align: centre;
-  padding: 20px 500px;
-  width: 100%;
-}
-
-p {
-  font-size: 21px;
-  color: gray;
-  font-family: "Verdana";
-  text-align: centre;
-  padding: 0px 300px;
-  width:100%
-}
-footer {
-  text-align: right;
-  right: 0;
-  bottom: 0;
-  padding :0 1050px ;
-  color: gray;
-}
-    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheets" href="resources/css/style.css">
@@ -74,10 +14,10 @@ footer {
      </div>
     <h2> Your personal travel guide </h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you </p>
-    <p><img src="resources/images/camp.png" alt="landscape"></p>
+    <p><img src="resources/images/camp.jpg" alt="landscape"></p>
     <div style="text-align: centred;
                  padding: 0 700px;">
-    <img src="resources/images/phone.jpg" alt="Cellphone Icon">
+    <img src="resources/images/phone.png" alt="Cellphone Icon">
     </div>
     <h3 style="text-align: center;">Coming Soon for iPhone and Android</h3>
     <a href="#">Download Excursion(Coming soon!)</a>
